[package]
name = "serde-dot-case"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rename all enum fields to dot.case"
repository = "https://github.com/nitn3lav/serde-dot-case"
keywords = ["serde"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.53", features = ["full"] }

[lib]
proc-macro = true
